[package]
name = "start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86_64-lithium.json"

[profile.release]
panic = "abort"

[[bin]]
name = "lithium"
path = "kern.rs"

[dependencies]
bootloader = "0.9.8"

[package.metadata.bootimage]
build-command = ["-Zbuild-std=core", "build"]

run-command = ["qemu-x86_64", "-cdrom", "format=raw,file={}"]
